--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,5 +4,5 @@
     font-family: 'Courier New', Courier, monospace;
 }
 .colorbg{
-    background-color: #1c2227;
+    background-color: #ffffff;
 }
